manifests/ovo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "kenbot"
  labels:
    name: "kenbot"
