manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: text-generation
  name: text-generation
spec:
#  type: LoadBalancer
  ports:
  - name: text-generation-service
    port: 5002
    targetPort: 5002
  selector:
    app: text-generation
